force-app/main/default/objects/Document__c/Document__c.object-meta.xml
<CustomObject>
    <description>Tracks documents submitted as part of a loan application. Links uploaded files (ContentDocument) to the loan record and manages verification workflow.</description>
    <label>Document</label>
    <nameField>
        <displayFormat>DOC-{YYYY}-{000000}</displayFormat>
        <label>Document Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>