force-app/main/default/objects/Document__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <label>Content Document ID</label>
    <type>Text</type>
    <length>18</length>
    <description>Stores the Salesforce ContentDocument record ID for the uploaded file. Use to build file download/preview links in LWC.</description>
</CustomField>