force-app/main/default/objects/Document__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <label>Verified By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Document Verifications</relationshipLabel>
    <relationshipName>Document_Verifications</relationshipName>
</CustomField>